# babblr

./: .env.docker  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  CHANGELOG.md  CLA.md  CLAUDE.md  CLEANUP_COMMAND_SUMMARY.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  DEVELOPMENT.md  DOCKER.md  ENVIRONMENT.md  GITHUB_ACTIONS_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LICENSING.md  POLICIES.md  QUICKSTART.md  README.md  TESTING_ERROR_HANDLING.md  TRADEMARKS.md  TROUBLESHOOTING.md  UV_SETUP.md  VALIDATION.md  VISUAL_GUIDE.md  WINDOWS_SCRIPTS.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  run-backend.bat  run-backend.sh  run-frontend.bat  run-frontend.sh  setup.bat  setup.sh
.claude/commands/: cleanup.md  implement-issue.md  tdd.md
.claude/skills/codebase-analysis/: SKILL.md
.claude/skills/git-workflow/: SKILL.md
.claude/skills/github-issue/: SKILL.md
.claude/skills/project-policies/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/ruff/: action.yml
.github/actions/run-backend-tests/: action.yml
.github/actions/run-frontend-tests/: action.yml
.github/actions/setup-node/: action.yml
.github/actions/setup-python/: action.yml
.github/workflows/: ci.yml  cleanup.yml  dependabot-automerge.yml  markdown-check.yml.old  pre-release.yml  python-ci.yml  release.yml  ruff.yml  security.yml
backend/: .dockerignore  .env.example  ADAPTIVE_PROMPTS.md  Dockerfile  Dockerfile.dev  README.md  SETUP.md  UV_SETUP.md  WHISPER_OPTIMIZATION.md  check_cuda.py  check_timestamps.py  docker-entrypoint.sh  pyproject.toml  requirements.txt  setup-venv.bat  setup-venv.sh  test_backend.py  test_prompt_system.py
backend/app/: config.py  dependencies.py  main.py
backend/app/database/: db.py
backend/app/grammar/: __init__.py  models.py  schemas.py  service.py
backend/app/models/: cefr.py  models.py  schemas.py
backend/app/routes/: assessments.py  chat.py  conversations.py  credentials.py  grammar.py  lessons.py  progress.py  speech.py  stt.py  topics.py  tts.py  user_levels.py  vocabulary.py
backend/app/scripts/: __init__.py  generate_lessons.py  migrate_add_lesson_fields.py  migrate_add_mastery_score.py  migrate_add_topic_id.py  seed_vocabulary_lessons.py  test_prompt_system.py
backend/app/services/: assessment_seed.py  claude_service.py  conversation_service.py  language_catalog.py  modular_prompt_builder.py  progress_service.py  prompt_builder.py  scoring_service.py  tts_service.py  whisper_service.py
backend/app/services/llm/: __init__.py  base.py  exceptions.py  factory.py
backend/app/services/llm/providers/: __init__.py  claude.py  gemini.py  mock.py  ollama.py
backend/app/services/stt/: __init__.py  base.py  external_whisper.py  factory.py  local_whisper.py  mock_whisper.py
backend/app/static/: topics.json
backend/app/utils/: __init__.py  performance.py
backend/templates/prompt_components/: base_tutor.json
backend/templates/prompt_components/levels/: a1.json  a2.json  b1.json  b2.json  c1.json  c2.json
backend/templates/prompts/: a1.json  a2.json  b1.json  b2.json  c1.json  c2.json
backend/tests/: MANUAL_FRONTEND_TESTS.md  README.md  conftest.py  manual_api_check.py  manual_speech_services_test.py  test_api_endpoints.py  test_assessments.py  test_config_credentials.py  test_credentials.py  test_credentials_api.py  test_gemini_integration.py  test_grammar_lessons.py  test_initial_message_endpoint.py  test_initial_message_integration.py  test_integration.py  test_llm_factory_credentials.py  test_llm_providers.py  test_llm_providers_validation.py  test_performance.py  test_progress.py  test_prompt_builder.py  test_speech_services_validation.py  test_stt_factory.py  test_timezone_handling.py  test_tts_sanitizer.py  test_unit.py  test_vocabulary_lessons.py
backend/tests/grammar/: __init__.py  test_exercise_types.py  test_get_lesson.py  test_models.py  test_spaced_rep.py  test_submit_exercise.py
backend/tests/lessons/: __init__.py  test_list_lessons.py
backend/tests/manual/: README.md  test_performance.ps1
databricks/: README.md  VALIDATION.md  export_data.py  generate_synthetic_data.py
databricks/notebooks/: 01_bronze_layer.ipynb  01_bronze_layer.py  02_silver_layer.ipynb  02_silver_layer.py  03_gold_layer.ipynb  03_gold_layer.py  04_dashboard.ipynb  04_dashboard.py
docker/: .env.template  GPU.md  README.md  WHISPER.md  WHISPER_STT_VALIDATION.md  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.whisper.yml  docker-compose.yml  test_whisper_container.py
docs/: ARCHITECTURE.md  CLAUDE-CODE.md  CONVERSATION_FLOW.md  DATABASE_SCHEMA.md  README.md
docs/adr/: 0001-timezone-handling.md
docs/ci/: CACHING_STRATEGY.md  CI_PIPELINE.md  GITHUB_ACTIONS_GUIDE.md  GITHUB_ACTIONS_SUMMARY.md  OIDC_SETUP.md  README.md  RELEASE_PROCESS.md  REPOSITORY_CLEANUP.md  SECURITY_SCANNING.md  TROUBLESHOOTING_CI.md
docs/curriculum/: lesson-creation.md
docs/performance/: DEBUGGING.md  INSTRUMENTATION.md  README.md  STREAMING.md
docs/prd/: README.md  TEMPLATE.md
docs/prd/00-vision/: market-positioning.md  mission-vision.md  product-principles.md
docs/prd/01-stakeholders/: contributors.md  overview.md  project-owner.md  students.md  tutors.md
docs/prd/02-user-stories/: overview.md  owner-stories.md  story-backlog.md  student-stories.md  tutor-stories.md
docs/prd/03-context/: cefr-framework.md  domain-model.md  (+2 more)
examples/: test_api.py
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/electron/: credentialStorage.cjs  main.cjs  main.js  preload.cjs
frontend/src/: App.css  App.test.tsx  App.tsx  main.tsx
frontend/tests/: e2e_conversation.spec.ts
scripts/: README.md  check_markdown_local_links.py  cleanup-github-actions.sh  cleanup-merged-branches.sh  no-commit-to-main.sh
(+119 files in other folders)
