[project]
name = "babblr-backend"
version = "1.0.0"
description = "Backend API for Babblr language learning app"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = {text = "AGPL-3.0-only OR LicenseRef-Babblr-Commercial"}
authors = [
    {name = "Babblr Contributors"}
]

dependencies = [
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.1",
    "python-multipart>=0.0.18",
    "anthropic>=0.39.0",
    # PyTorch with CUDA support - uv will use the pytorch-cu121 index (see [tool.uv.sources])
    "torch>=2.0.0",
    "openai-whisper>=20231117",
    # Provides a bundled FFmpeg binary for many platforms. We use it as a fallback
    # on Windows so Whisper can decode audio without a system-wide FFmpeg install.
    "imageio-ffmpeg>=0.6.0",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20.0",
    "pydantic>=2.10.3",
    "pydantic-settings>=2.6.1",
    "edge-tts>=6.1.18",
    "pydub>=0.25.1",
    # Windows-friendly IANA timezone database for zoneinfo (fixes ZoneInfoNotFoundError)
    "tzdata>=2025.1",
    # LangChain framework for prompts, memory, and guardrails
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-anthropic>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.1",
    "pre-commit>=3.7.1",
    "ruff>=0.8.4",
]

[project.scripts]
babblr-backend = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Use PyTorch CUDA index for torch packages
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.1",
    "pre-commit>=3.7.1",
    "ruff>=0.8.4",
    "pyright>=1.1.407",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
# Ensure 'app' is always recognized as first-party regardless of working directory
known-first-party = ["app"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["app"]
exclude = ["tests", ".venv"]
# Lenient on common ORM/API patterns - can tighten later
reportAttributeAccessIssue = "warning"
reportArgumentType = "warning"
