[project]
name = "babblr-backend"
version = "1.0.0"
description = "Backend API for Babblr language learning app"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = {text = "AGPL-3.0-only OR LicenseRef-Babblr-Commercial"}
authors = [
    {name = "Babblr Contributors"}
]

dependencies = [
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.1",
    "python-multipart>=0.0.18",
    "anthropic>=0.39.0",
    # PyTorch with CUDA support - uv will use the pytorch-cu121 index (see [tool.uv.sources])
    "torch>=2.0.0",
    "openai-whisper>=20231117",
    # Provides a bundled FFmpeg binary for many platforms. We use it as a fallback
    # on Windows so Whisper can decode audio without a system-wide FFmpeg install.
    "imageio-ffmpeg>=0.6.0",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20.0",
    "pydantic>=2.10.3",
    "pydantic-settings>=2.6.1",
    "edge-tts>=6.1.18",
    "pydub>=0.25.1",
    # Windows-friendly IANA timezone database for zoneinfo (fixes ZoneInfoNotFoundError)
    "tzdata>=2025.1",
    # LangChain framework for prompts, memory, and guardrails
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-anthropic>=0.3.0",
    # Data analysis dependencies (for databricks data generation)
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-xdist>=3.6.1",
    "httpx>=0.28.1",
    "pre-commit>=3.7.1",
    "ruff>=0.8.4",
]

[project.scripts]
babblr-backend = "app.main:main"
babblr-test-prompt-system = "app.scripts.test_prompt_system:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Use PyTorch CUDA index for torch packages
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-xdist>=3.6.1",
    "httpx>=0.28.1",
    "pre-commit>=3.7.1",
    "ruff>=0.8.4",
    "pyright>=1.1.407",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]
markers = [
    "asyncio: mark a test as using asyncio (provided by pytest-asyncio)",
    "integration: mark a test as an integration test (may require a running backend server)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "T201"]
ignore = ["E501", "E402"]
# E402 (module-import-not-at-top-of-file) is ignored to allow logger initialization
# between imports. This is a common pattern where logging setup (e.g.,
# logging.basicConfig() or logger = logging.getLogger(__name__)) needs to happen
# after some imports but before others, especially when configuring logging early.

[tool.ruff.lint.isort]
# Ensure 'app' is always recognized as first-party regardless of working directory
known-first-party = ["app"]
# Allow logger initialization between import groups by treating it as a separator
split-on-trailing-comma = true

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["app"]
exclude = ["tests", ".venv", "app/scripts"]

# SQLAlchemy 1.x Column-style ORM patterns cause false positives in pyright
# At the class level: Column[int] is the type annotation
# At runtime (after query): these become actual Python values (int, str, etc.)
# Pyright doesn't understand this transformation, leading to warnings like:
#   - "Cannot assign datetime to Column[Unknown]" (assignment to ORM attributes)
#   - "Column[int] cannot be assigned to int" (passing ORM values to Pydantic)
#
# Solution options:
#   1. Migrate to SQLAlchemy 2.0 Mapped types (future work)
#   2. Add type: ignore comments throughout (clutters code)
#   3. Configure pyright to accept these patterns (current approach)
#
# These settings suppress SQLAlchemy ORM false positives while keeping real errors:
reportAttributeAccessIssue = "none"  # ORM attribute assignments
reportArgumentType = "none"  # ORM values to Pydantic models
reportGeneralTypeIssues = "error"  # Real type errors still fail
